--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,47 @@
-name: Build Barcode Tool
-on: [push]
+name: 打包快切助手 EXE (tab.py)
+
+on:
+  push:
+    tags:
+      - 'v*' # 当推送标签如 v1.0 时触发打包并发布 Release
+  workflow_dispatch: # 支持手动点击按钮打包
+
 jobs:
   build:
     runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Set up Python
+    steps:
+      - name: 检出代码
+        uses: actions/checkout@v4
+
+      - name: 设置 Python 环境
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
-        # 确保安装了代码中用到的所有库
-        run: pip install keyboard pyautogui pyinstaller
+      - name: 安装项目依赖
+        run: |
+          python -m pip install --upgrade pip
+          pip install keyboard pywin32 pyperclip pyautogui pyinstaller
 
-      - name: Build EXE
-        # 1. 直接指定根目录的 tab.py
-        # 2. --uac-admin 确保管理员权限（拦截键盘必备）
-        # 3. --name barcode_switch 强制将 tab.py 生成的文件重命名，以匹配下一步的路径
-        run: pyinstaller --onefile --uac-admin --clean --name barcode_switch tab.py
+      - name: 使用 PyInstaller 执行打包
+        run: |
+          # --noconsole: 隐藏运行时的命令行窗口
+          # --onefile: 将所有依赖打包进一个 exe 文件
+          # --uac-admin: 必须添加！由于 keyboard 库拦截底层按键，EXE 必须以管理员身份运行
+          # --name: 指定生成的 EXE 文件名
+          pyinstaller --noconsole --onefile --uac-admin --name "BarcodeSwitcher_v8" tab.py
 
-      - name: Upload Artifact
+      - name: 上传构建结果 (Artifacts)
         uses: actions/upload-artifact@v4
         with:
-          name: BarcodeTool
-          # 这里的 barcode_switch.exe 必须和上面 --name 指定的名称一致
-          path: dist/barcode_switch.exe
+          name: BarcodeSwitcher-Windows
+          path: dist/BarcodeSwitcher_v8.exe
+
+      - name: 自动创建 Release 发布
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/BarcodeSwitcher_v8.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
