--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,61 @@
-name: 打包快切助手 EXE (修复版)
+name: 打包快切助手 v16 (tab.py)
 
 on:
   push:
     tags:
-      - 'v*'
-  workflow_dispatch:
+      - 'v*'  # 當推送到 v1.0 等標籤時自動打包發布
+  workflow_dispatch: # 支持手動點擊按鈕打包
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-      - name: 检出代码
+      - name: 檢出代碼
         uses: actions/checkout@v4
 
-      - name: 设置 Python 3.10
+      - name: 設置 Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip'
 
-      - name: 安装依赖
+      - name: 安裝項目依賴
         run: |
           python -m pip install --upgrade pip
+          # 安裝 requirements.txt 中的庫
           pip install -r requirements.txt
-          pip install pyinstaller
+          # 額外安裝打包必備工具
+          pip install pyinstaller pypiwin32
 
-      - name: 执行 PyInstaller 打包
+      - name: 執行 PyWin32 初始化
         run: |
-          # 使用 --collect-submodules 替代复杂的路径脚本
-          # 直接指定隐藏导入，避开路径识别问题
+          # 解決 win32gui 找不到 DLL 的報錯
+          python [python -c "import os, sys; print(os.path.join(sys.prefix, 'Scripts', 'pywin32_postinstall.py'))"] -install
+        continue-on-error: true
+
+      - name: 使用 PyInstaller 打包
+        run: |
+          # --noconsole: 運行時隱藏黑窗口
+          # --onefile: 打包成單個 EXE
+          # --uac-admin: 核心！確保 F9 和攔截邏輯有系統最高權限
+          # --collect-all: 強制收集 win32 依賴，防止運行報錯
           pyinstaller --noconsole --onefile --uac-admin `
+          --collect-all win32gui `
           --hidden-import="win32gui" `
           --hidden-import="win32con" `
-          --hidden-import="win32api" `
-          --collect-all win32gui `
-          --collect-all pywin32 `
-          --name "BarcodeSwitcher_v8" tab.py
+          --name "BarcodeSwitcher_v16" tab.py
 
-      - name: 上传构建产物
+      - name: 上傳打包產物 (Artifacts)
         uses: actions/upload-artifact@v4
         with:
           name: BarcodeSwitcher-Release
-          path: dist/BarcodeSwitcher_v8.exe
+          path: dist/BarcodeSwitcher_v16.exe
+
+      - name: 發布到 GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/BarcodeSwitcher_v16.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
